@@ -1,3 +1,9 @@
+2005-10-19  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+        * control-center.c: set the adjustments, so the GtkScrollBar arrows
+        works again, set initial adjustment to view the top of the
+	canvas.
+		
 2005-10-15  Rodrigo Moya <rodrigo@novell.com>
 
 	Fixes #315505
